--- a/P0-HelloWorld/index.html
+++ b/P0-HelloWorld/index.html
@@ -25,7 +25,36 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello class! This is HTML5 Boilerplate.</p>
+  <div class="hero">
+    <a href="https://www.youtube.com/watch?v=J48BpiPLHtA/" target="_blank">
+      <img src="https://images.unsplash.com/photo-1560837616-fee1f3d8753a?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+           alt="Clouds">
+      <div class="overlay-text">
+        <h1>Clouds</h1>
+        <h3>by Joni Mitchell</h3>
+      </div>
+    </a>
+  </div>
+
+  <div>
+    <p>
+      Side one
+      No.	Title	Length
+      1.	"Tin Angel"	4:09
+      2.	"Chelsea Morning"	2:35
+      3.	"I Don't Know Where I Stand"	3:13
+      4.	"That Song About the Midway"	4:38
+      5.	"Roses Blue"	3:52
+      Side two
+      No.	Title	Length
+      1.	"The Gallery"	4:12
+      2.	"I Think I Understand"	4:28
+      3.	"Songs to Aging Children Come"	3:10
+      4.	"The Fiddle and the Drum"	2:50
+      5.	"Both Sides, Now"
+    </p>
+  </div>
+
   <script src="js/app.js"></script>
 
 </body>
