Added css, changed image, added responsivity

--- a/P0-HelloWorld/index.html
+++ b/P0-HelloWorld/index.html
@@ -1,23 +1,25 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Clouds – Joni Mitchell</title>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
+  <!-- Meta (valfritt att fylla på) -->
+  <meta name="description" content="Joni Mitchell – Clouds (tracklist)">
+  <meta property="og:title" content="Clouds – Joni Mitchell">
+  <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <meta property="og:image:alt" content="Clouds album cover">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
-
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -25,18 +27,19 @@
 <body>
 <!-- Hero -->
 <div class="hero">
-  <a href="https://www.youtube.com/watch?v=J48BpiPLHtA/" target="_blank">
-    <img src="https://images.unsplash.com/photo-1560837616-fee1f3d8753a?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-         alt="Clouds">
+  <a href="https://www.youtube.com/watch?v=J48BpiPLHtA" target="_blank" rel="noopener">
+    <img
+      src="https://images.genius.com/d062d3d9d19b127180e2a864eefe78f2.1000x1000x1.jpg"
+      alt="Clouds album cover" />
     <div class="overlay-text">
-      <h1>Clouds</h1>
-      <h3>by Joni Mitchell</h3>
+      <!--<h1>Clouds</h1>-->
+      <!--<h3>by Joni Mitchell</h3>-->
     </div>
   </a>
 </div>
 
-<!-- Tracklist in two columns -->
-<div class="tracklist">
+<!-- Tracklist (två kolumner desktop, en kolumn mobil) -->
+<section class="tracklist">
   <div class="column">
     <h2>Side one</h2>
     <ol>
@@ -58,9 +61,8 @@
       <li>"Both Sides, Now"</li>
     </ol>
   </div>
-</div>
+</section>
 
 <script src="js/app.js"></script>
 </body>
-
 </html>
